--- a/source/assets/stylesheets/utilities/_borders.scss
+++ b/source/assets/stylesheets/utilities/_borders.scss
@@ -27,8 +27,10 @@ $_sides: ['top', 'right', 'bottom', 'left'];
 
     &::before {
       $offset: -(($marker-width - border-width('thin')) / 2);
-      border: #{$slice-width}px solid transparent;
+
       border-image: url('/assets/images/borders/border-markers-top-left.svg') $slice-width repeat;
+      border-style: solid;
+      border-width: #{$slice-width}px;
       bottom: $offset;
       content: '';
       display: block;
@@ -55,8 +57,9 @@ $_sides: ['top', 'right', 'bottom', 'left'];
     &::before {
       $offset: -(($marker-width - border-width('thin')) / 2);
 
-      border: #{$slice-width}px solid transparent;
       border-image: url('/assets/images/borders/border-markers-corners.svg') $slice-width repeat;
+      border-style: solid;
+      border-width: #{$slice-width}px;
       bottom: $offset;
       content: '';
       display: block;
@@ -83,6 +86,7 @@ $_sides: ['top', 'right', 'bottom', 'left'];
 
   @supports(border-image: url('/assets/images/borders/border-markers-wide-top.svg') 12 repeat) {
     &::before {
+      border-style: solid;
       content: '';
       display: block;
       left: 0;
@@ -118,8 +122,8 @@ $_sides: ['top', 'right', 'bottom', 'left'];
 
     // add the border image to a pseudo element so it doesn't mess with the container's padding or bg image
     &::before {
-      border: #{$slice-width}px solid transparent;
       border-image: url('#{$path}#{$image}') $slice-width repeat;
+      border-width: #{$slice-width}px;
       // vertical offset so the border is placed at the edge of the container
       #{$side}: -(($image-height - $border-height) / 2);
     }
